@@ -57,9 +57,9 @@
 		<setting type="lsep" label="40313" />
 		<setting type="sep"/>
 		<setting id="general.audio" type="enum" label="40314" default="40315" lvalues="40315|40316" />
-		<setting id="general.source" type="labelenum" label="40330" default="Sub" values="Dub|Sub|Both" />
-		<setting id="general.dubsort" type="bool" label="40333" default="false" visible="eq(-1,Both)" />
-		<setting id="general.subtitles" type="bool" label="40427" default="false" />
+		<setting id="general.source" type="labelenum" label="40330" default="Sub" values="Sub|Dub|Both" />
+		<setting id="general.sourcesort" type="labelenum" label="40333" default="Random" values="Random|Sub|Dub" visible="eq(-1,Both)" />
+		<setting id="general.subtitles" type="bool" label="40427" default="false"/>
 
 		<!-- Next Episode Dialog -->
 		<setting type="lsep" label="40317" />
