@@ -1,3 +1,8 @@
+Changelog 0.3.40 [20230302]:
+- Improved Teritary Sort Preferences setting
+- Added Subs Teritary Sort Preferences
+- Renamed Filter Sub and Dubs
+
 Changelog 0.3.39 [20230302]:
 - Moved Enable Teritary Dub Sort Preferences
 
